fix scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+body {
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+
 .sidebar-btn-wrapper {
   display: flex;
   align-items: center;
